--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="search-button">
         <a href="#">
-            <img src="/portfolio/myWeatherApp/image/search.png" alt="" data-searchIcon>
+            <img src="/image/search.png" alt="" data-searchIcon>
         </a>
         <input type="text" placeholder="City Name" data-searchField>
         <select id="country" name="country" data-countrySelection>
@@ -272,7 +272,7 @@
         </select> 
     </div>
     <header class="header-wrapper">
-        <img src="/portfolio/myWeatherApp/svgs/cloudy.svg" alt="" class="current-weather-icon">
+        <img src="/svgs/cloudy.svg" alt="" class="current-weather-icon">
         <div class="current-weather-temps">
             <div class="current-weather-label"><span class="current-weather-temp">...</span><span class="current-temp-badge">&deg;</span><span class="current-temp-type">F</span></div>
             <div class="current-weather-label"><span class="current-weather-type">...</span></div>
