--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         </select> 
     </div>
     <header class="header-wrapper">
-        <img src="svgs/cloudy.svg" alt="" class="current-weather-icon">
+        <img src="/portfolio/myWeatherApp/svgs/cloudy.svg" alt="" class="current-weather-icon">
         <div class="current-weather-temps">
             <div class="current-weather-label"><span class="current-weather-temp">...</span><span class="current-temp-badge">&deg;</span><span class="current-temp-type">F</span></div>
             <div class="current-weather-label"><span class="current-weather-type">...</span></div>
