--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         </div>
     </nav>
     <header class="header-wrapper">
-        <img src="/svgs/clear.svg" alt="weather-icon" class="current-weather-icon">
+        <img src="./svgs/clear.svg" alt="weather-icon" class="current-weather-icon">
         <div class="current-weather-temps">
             <div class="current-weather-label"><span class="current-weather-temp">...</span><span class="current-temp-badge">&deg;</span><span class="current-temp-type">F</span></div>
             <div class="current-weather-label"><span class="current-weather-type">...</span></div>
